styles.css
* {
    /* outline: 2px solid red; */
}

body {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;

    /* background-color: hsl(46, 83%, 49%); */
    background-color: lavender;
    font-family: 'Courier New', Courier, monospace;
}

h1 {
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    color: rgb(0, 0, 0);
}

a {
    color: rgb(0, 0, 0);
}

.title {
    text-align: center;
}

.menu {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
    gap: 16px;
}

.image {
    width: 100%;
    max-width: 600px;
    min-width: 0px;
    object-fit: cover;
}

.card {
    display: flex;
    flex-direction: column;
    margin-top: 10px;
    margin-bottom: 10px;
    padding: 10px;

    border: 10px solid black;
    background-color: lightgoldenrodyellow;
    box-shadow: 2px 4px 16px rgba(0, 0, 0, .06);
}


.menu .card .image {
    width: 250px;
    height: 200px;
}

.recipe {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    gap: 16px;
}

.recipe .card {
    width: 700px;
    min-width: 250px;
}

